# finescale

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
catalogue_scraper/: .gitignore  Cargo.toml  build.rs
catalogue_scraper/src/: main.rs  requirement_extractor.rs  requirements.rustemo  requirements_actions.rs  requirements_tests.rs
scraper/: Cargo.toml
scraper/src/: lexer.rs  main.rs  parser.rs
src/: course_database.rs  graph_widget.rs  icons.rs  lib.rs  main.rs
src/ui/: graph_widget.rs  mod.rs
