[package]
name = "finescale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
iced = { version = "0.12.1", features = ["svg", "canvas", "advanced"] }
iced_aw = "0.8.0"
graph_layout = { package = "layout-rs", version = "0.1.2" }
open = "5.1.1"
petgraph = "0.6.3"
ron = "0.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[workspace]
members = ["catalogue_scraper", "scraper"]
