[package]
name = "finescale"
version = "0.1.0"
edition = "2024"

# Some binary size optimizations
[profile.release]
strip = true 
lto = true
codegen-units = 1
panic = "abort"

# App bundle info for cargo-bundle
[package.metadata.bundle]
name = "Finescale"
identifier = "com.genericconfluent.finescale"
short_description = "Algorithmic planning for course schedules"
category = "public.app-category.utilities"
version = "0.1.0"
osx_url_schemes = ["com.genericconfluent.finescale"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
iced = { version = "0.13.1", features = ["svg", "canvas", "advanced"] }
iced_aw = "0.12.2"
graph_layout = { package = "layout-rs", version = "0.1.2" }
open = "5.3.2"
petgraph = "0.7.1"
ron = "0.9.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tinyvec = "1.9.0"

[workspace]
members = ["catalogue_scraper", "scraper"]
