[package]
name = "catalogue_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
html-escape = "0.2.13"
log = "0.4.21"
rate_limit = "0.1.1"
regex = "1.10.3"
rustemo = "0.6.0"
tl = "0.7.8"
ureq = "2.9.6"
url = "2.5.0"
urlencoding = "2.1.3"
write-json = "0.1.4"

# Used by rustemo generated code
colored = "2.1.0"
once_cell = "1.19.0"

[dependencies.env_logger]
version = "0.11.2"
features = ["auto-color", "color"]
default-features = false

[dev-dependencies]
expect-test = "1.4.1"

[build-dependencies]
rustemo-compiler = "0.6.0"
